--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvPerson"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Welcome to second activity"
         android:textSize="30sp"
