--- a/app/src/main/res/layout/fragment_bottom_nav1.xml
+++ b/app/src/main/res/layout/fragment_bottom_nav1.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SecondFragment">
+    tools:context=".fragments.BottomNav1">
+
 
     <TextView
-        android:id="@+id/tvSecondFragment"
+        android:id="@+id/tvHomeFrag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Second fragment"
-        android:textSize="30sp"
+        android:text="Home Fragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
