--- a/app/src/main/res/layout/fragment_bottom_nav3.xml
+++ b/app/src/main/res/layout/fragment_bottom_nav3.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FirstFragment">
+    tools:context=".fragments.BottomNav3">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/tvFirstFragment"
+        android:id="@+id/tvProfileFrag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="First fragment"
-        android:textSize="30sp"
+        android:text="Profile frag"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
