--- a/app/src/main/res/layout/fragment_bottom_nav2.xml
+++ b/app/src/main/res/layout/fragment_bottom_nav2.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout123132"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.BottomNav2">
@@ -13,6 +14,17 @@
         android:text="Message Frag"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btnSixthActivityNav"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnSixthActivityNav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Shared preferences"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tvMessageFrag"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
