--- a/app/src/main/res/layout/activity_sixth.xml
+++ b/app/src/main/res/layout/activity_sixth.xml
@@ -8,24 +8,19 @@
 
     <EditText
         android:id="@+id/etSharedPref1"
-        android:layout_width="0dp"
+        android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:hint="Secret nr 1"
-        app:layout_constraintBottom_toTopOf="@+id/etSharedPref2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etSharedPref2"
-        android:layout_width="0dp"
+        android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:hint="Secret nr 2"
-        app:layout_constraintBottom_toTopOf="@+id/btnLoadPref"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSharedPref1" />
 
@@ -34,19 +29,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save pref"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLoadPref" />
+        app:layout_constraintStart_toEndOf="@+id/btnLoadPref"
+        app:layout_constraintTop_toBottomOf="@+id/etSharedPref2" />
 
     <Button
         android:id="@+id/btnLoadPref"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Load Pref"
-        app:layout_constraintBottom_toTopOf="@+id/btnSavePref"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnSavePref"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSharedPref2" />
@@ -56,8 +49,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Show notification"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSavePref" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLoadPref" />
+
+    <Button
+        android:id="@+id/btnGoToSeventh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go next.."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
